Resolve conflict from 12/6 trunk rebase - KIP1071 trunk rebase 11_25 add streams membership manager stream thread integration (#17968)
Rebase on trunk