@@ -18,8 +18,9 @@ package org.apache.kafka.clients.consumer.internals;
 
 import org.apache.kafka.clients.consumer.internals.events.BackgroundEvent;
 import org.apache.kafka.clients.consumer.internals.events.BackgroundEventHandler;
-import org.apache.kafka.clients.consumer.internals.events.StreamsOnAssignmentCallbackCompletedEvent;
-import org.apache.kafka.clients.consumer.internals.events.StreamsOnAssignmentCallbackNeededEvent;
+import org.apache.kafka.clients.consumer.internals.events.StreamsOnAllTasksLostCallbackCompletedEvent;
+import org.apache.kafka.clients.consumer.internals.events.StreamsOnTasksAssignedCallbackCompletedEvent;
+import org.apache.kafka.clients.consumer.internals.events.StreamsOnTasksAssignedCallbackNeededEvent;
 import org.apache.kafka.common.KafkaException;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.message.StreamsGroupHeartbeatResponseData;
@@ -34,6 +35,8 @@ import org.apache.kafka.common.utils.Time;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -54,6 +57,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -85,6 +89,9 @@ public class StreamsMembershipManagerTest {
     @Mock
     private StreamsAssignmentInterface streamsAssignmentInterface;
 
+    @Captor
+    private ArgumentCaptor<StreamsOnTasksAssignedCallbackNeededEvent> onAssignmentCallbackNeededEventCaptor;
+
     private Queue<BackgroundEvent> backgroundEventQueue = new LinkedList<>();
     private BackgroundEventHandler backgroundEventHandler = new BackgroundEventHandler(backgroundEventQueue);
 
@@ -95,8 +102,6 @@ public class StreamsMembershipManagerTest {
             streamsAssignmentInterface,
             subscriptionState,
             new LogContext("test"),
-            Optional.empty(),
-            backgroundEventHandler,
             time,
             metrics
         );
@@ -151,62 +156,87 @@ public class StreamsMembershipManagerTest {
     @Test
     public void testReconcilingEmptyToSingleActiveTask() {
         setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks =
+            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecuted);
         joining();
 
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
 
-        final Collection<TopicPartition> expectedPartitionAssignment = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
-        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionAssignment, expectedPartitionAssignment);
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        final Set<StreamsAssignmentInterface.TaskId> activeTasks =
-            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
-        final StreamsAssignmentInterface.Assignment expectedTaskAssignment = makeTaskAssignment(activeTasks);
-        assertEquals(expectedTaskAssignment, onAssignmentCallbackNeededEvent.assignment());
-        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
+        final Collection<TopicPartition> expectedPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
+        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionsToAssign, expectedPartitionsToAssign);
+        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionsToAssign);
         verifyInStateReconciling(membershipManager);
-        onAssignmentCallbackNeededEvent.future().complete(null);
-        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedPartitionsToAssign);
         verifyInStateAcknowledging(membershipManager);
+        verify(streamsAssignmentInterface, never()).requestOnTasksRevokedCallbackInvocation(any());
     }
 
     @Test
     public void testReconcilingActiveTaskToDifferentActiveTask() {
         setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksRevokedCallbackExecuted = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
+        );
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
+        when(streamsAssignmentInterface.requestOnTasksRevokedCallbackInvocation(activeTasksSetup))
+            .thenReturn(onTasksRevokedCallbackExecuted);
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecuted);
         when(subscriptionState.assignedPartitions())
             .thenReturn(Collections.emptySet())
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
 
-        final Collection<TopicPartition> expectedPartitionAssignment = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
-        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionAssignment, expectedPartitionAssignment);
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
-            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
-        );
-        final StreamsAssignmentInterface.Assignment expectedStreamsAssignment = makeTaskAssignment(activeTasks);
-        assertEquals(expectedStreamsAssignment, onAssignmentCallbackNeededEvent.assignment());
-        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
+        final Set<TopicPartition> expectedPartitionsToRevoke = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
+        final Collection<TopicPartition> expectedPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
+        verify(subscriptionState).markPendingRevocation(expectedPartitionsToRevoke);
+        verify(subscriptionState, never()).assignFromSubscribedAwaitingCallback(expectedPartitionsToAssign, expectedPartitionsToAssign);
+        onTasksRevokedCallbackExecuted.complete(null);
+        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionsToAssign, expectedPartitionsToAssign);
+        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionsToAssign);
         verifyInStateReconciling(membershipManager);
-        onAssignmentCallbackNeededEvent.future().complete(null);
-        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedPartitionsToAssign);
         verifyInStateAcknowledging(membershipManager);
     }
 
     @Test
     public void testReconcilingSingleActiveTaskToAdditionalActiveTask() {
         setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0),
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
+        );
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecuted);
         when(subscriptionState.assignedPartitions())
             .thenReturn(Collections.emptySet())
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
 
@@ -214,57 +244,58 @@ public class StreamsMembershipManagerTest {
             new TopicPartition(TOPIC_0, PARTITION_0),
             new TopicPartition(TOPIC_0, PARTITION_1)
         );
-        final Collection<TopicPartition> expectedAdditionalPartitionAssignment = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
-        verify(subscriptionState).assignFromSubscribedAwaitingCallback(
-            expectedPartitionAssignment,
-            expectedAdditionalPartitionAssignment
-        );
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
-            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0),
-            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
-        );
-        final StreamsAssignmentInterface.Assignment expectedStreamsAssignment = makeTaskAssignment(activeTasks);
-        assertEquals(expectedStreamsAssignment, onAssignmentCallbackNeededEvent.assignment());
-        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedAdditionalPartitionAssignment);
+        final Collection<TopicPartition> expectedAdditionalPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
+        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionAssignment, expectedAdditionalPartitionsToAssign);
+        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
         verifyInStateReconciling(membershipManager);
-        onAssignmentCallbackNeededEvent.future().complete(null);
-        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedAdditionalPartitionAssignment);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedAdditionalPartitionsToAssign);
         verifyInStateAcknowledging(membershipManager);
+        verify(streamsAssignmentInterface, never()).requestOnTasksRevokedCallbackInvocation(any());
     }
 
     @Test
     public void testReconcilingMultipleActiveTaskToSingleActiveTask() {
         setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksRevokedCallbackExecuted = new CompletableFuture<>();
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0),
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
+        );
+        final Set<StreamsAssignmentInterface.TaskId> activeTasksToRevoke = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
+        );
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
+        when(streamsAssignmentInterface.requestOnTasksRevokedCallbackInvocation(activeTasksToRevoke))
+            .thenReturn(onTasksRevokedCallbackExecuted);
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecuted);
         when(subscriptionState.assignedPartitions())
             .thenReturn(Collections.emptySet())
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0), new TopicPartition(TOPIC_0, PARTITION_1)));
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
 
-        final Collection<TopicPartition> expectedPartitionAssignment = Set.of(
-            new TopicPartition(TOPIC_0, PARTITION_1)
-        );
-        final Collection<TopicPartition> expectedAdditionalPartitionAssignment = Collections.emptySet();
-        verify(subscriptionState).assignFromSubscribedAwaitingCallback(
-            expectedPartitionAssignment,
-            expectedAdditionalPartitionAssignment
-        );
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
-            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_1)
-        );
-        final StreamsAssignmentInterface.Assignment expectedStreamsAssignment = makeTaskAssignment(activeTasks);
-        assertEquals(expectedStreamsAssignment, onAssignmentCallbackNeededEvent.assignment());
-        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedAdditionalPartitionAssignment);
+        final Set<TopicPartition> expectedPartitionsToRevoke = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
+        final Collection<TopicPartition> expectedPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
+        final Collection<TopicPartition> expectedAdditionalPartitionsToAssign = Collections.emptySet();
+        verify(subscriptionState).markPendingRevocation(expectedPartitionsToRevoke);
+        verify(subscriptionState, never()).assignFromSubscribedAwaitingCallback(expectedPartitionsToAssign, expectedAdditionalPartitionsToAssign);
+        onTasksRevokedCallbackExecuted.complete(null);
+        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionsToAssign, expectedAdditionalPartitionsToAssign);
+        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedAdditionalPartitionsToAssign);
         verifyInStateReconciling(membershipManager);
-        onAssignmentCallbackNeededEvent.future().complete(null);
-        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedAdditionalPartitionAssignment);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedAdditionalPartitionsToAssign);
         verifyInStateAcknowledging(membershipManager);
     }
 
@@ -274,79 +305,50 @@ public class StreamsMembershipManagerTest {
             SUB_TOPOLOGY_ID_0, TOPIC_0,
             SUB_TOPOLOGY_ID_1, TOPIC_1
         );
-        joining();
-
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0), SUB_TOPOLOGY_ID_1, List.of(PARTITION_0)));
-
-        final Collection<TopicPartition> expectedPartitionAssignment = Set.of(
-            new TopicPartition(TOPIC_0, PARTITION_0),
-            new TopicPartition(TOPIC_1, PARTITION_0)
-        );
-        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionAssignment, expectedPartitionAssignment);
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
         final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0),
             new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_1, PARTITION_0)
         );
-        final StreamsAssignmentInterface.Assignment expectedTaskAssignment = makeTaskAssignment(activeTasks);
-        assertEquals(expectedTaskAssignment, onAssignmentCallbackNeededEvent.assignment());
-        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
-        verifyInStateReconciling(membershipManager);
-        onAssignmentCallbackNeededEvent.future().complete(null);
-        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
-        verifyInStateAcknowledging(membershipManager);
-    }
-
-    @Test
-    public void testReconcilingEmptyToMultipleActiveTaskOfConcatenatedSubtopologies() {
-        setupStreamsAssignmentInterfaceWithTwoConcatenedSubtopologies(
-            SUB_TOPOLOGY_ID_0, TOPIC_0,
-            SUB_TOPOLOGY_ID_1, TOPIC_1
-        );
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecuted);
         joining();
 
-        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0), SUB_TOPOLOGY_ID_1, List.of(PARTITION_0)));
+        reconcile(makeHeartbeatResponse(
+            SUB_TOPOLOGY_ID_0, List.of(PARTITION_0),
+            SUB_TOPOLOGY_ID_1, List.of(PARTITION_0))
+        );
 
-        final Collection<TopicPartition> expectedPartitionAssignment = Set.of(
+        final Collection<TopicPartition> expectedPartitionsToAssign = Set.of(
             new TopicPartition(TOPIC_0, PARTITION_0),
             new TopicPartition(TOPIC_1, PARTITION_0)
         );
-        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionAssignment, expectedPartitionAssignment);
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        final Set<StreamsAssignmentInterface.TaskId> activeTasks = Set.of(
-            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0),
-            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_1, PARTITION_0)
-        );
-        final StreamsAssignmentInterface.Assignment expectedTaskAssignment = makeTaskAssignment(activeTasks);
-        assertEquals(expectedTaskAssignment, onAssignmentCallbackNeededEvent.assignment());
-        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
+        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionsToAssign, expectedPartitionsToAssign);
+        verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionsToAssign);
         verifyInStateReconciling(membershipManager);
-        onAssignmentCallbackNeededEvent.future().complete(null);
-        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
+        onTasksAssignedCallbackExecuted.complete(null);
+        verify(subscriptionState).enablePartitionsAwaitingCallback(expectedPartitionsToAssign);
         verifyInStateAcknowledging(membershipManager);
+        verify(streamsAssignmentInterface, never()).requestOnTasksRevokedCallbackInvocation(any());
     }
 
     @Test
     public void testReconcilingAndAssignmentCallbackFails() {
-        final String topicName = "test_topic";
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, topicName);
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
         final Set<StreamsAssignmentInterface.TaskId> activeTasks =
             Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
-        final StreamsAssignmentInterface.Assignment expectedStreamsAssignment = makeTaskAssignment(activeTasks);
+        final CompletableFuture<Void> onTasksAssignedCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecuted);
         joining();
 
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
 
-        final Collection<TopicPartition> expectedPartitionAssignment = Set.of(new TopicPartition(topicName, PARTITION_0));
+        final Collection<TopicPartition> expectedPartitionAssignment = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
         verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedPartitionAssignment, expectedPartitionAssignment);
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        assertEquals(expectedStreamsAssignment, onAssignmentCallbackNeededEvent.assignment());
         verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
         verifyInStateReconciling(membershipManager);
-        onAssignmentCallbackNeededEvent.future().completeExceptionally(new RuntimeException("KABOOM!"));
+        onTasksAssignedCallbackExecuted.completeExceptionally(new RuntimeException("KABOOM!"));
         verifyInStateReconciling(membershipManager);
         verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedPartitionAssignment);
     }
@@ -365,6 +367,9 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testLeaveGroupWhenNotInGroupAndFenced() {
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
         fenced();
         final CompletableFuture<Void> future = membershipManager.leaveGroup();
@@ -380,39 +385,52 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testLeaveGroupWhenInGroupWithAssignment() {
-        final StreamsAssignmentInterface.Assignment emptyStreamsAssignment = makeTaskAssignment(Collections.emptySet());
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks =
+            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
+        final CompletableFuture<Void> onTasksRevokedCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksRevokedCallbackInvocation(activeTasks))
+            .thenReturn(onTasksRevokedCallbackExecuted);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
 
-        final CompletableFuture<Void> future = membershipManager.leaveGroup();
+        final CompletableFuture<Void> onGroupLeft = membershipManager.leaveGroup();
 
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        assertEquals(emptyStreamsAssignment, onAssignmentCallbackNeededEvent.assignment());
+        assertFalse(onGroupLeft.isDone());
         verify(subscriptionState, never()).unsubscribe();
         verifyInStatePrepareLeaving(membershipManager);
-        final CompletableFuture<Void> futureBeforeRevocationCallback = membershipManager.leaveGroup();
-        assertEquals(future, futureBeforeRevocationCallback);
-        onAssignmentCallbackNeededEvent.future().complete(null);
+        final CompletableFuture<Void> onGroupLeftBeforeRevocationCallback = membershipManager.leaveGroup();
+        assertEquals(onGroupLeft, onGroupLeftBeforeRevocationCallback);
+        onTasksRevokedCallbackExecuted.complete(null);
         verify(subscriptionState).unsubscribe();
-        assertFalse(future.isDone());
+        assertFalse(onGroupLeft.isDone());
         verifyInStateLeaving(membershipManager);
-        final CompletableFuture<Void> futureAfterRevocationCallback = membershipManager.leaveGroup();
-        assertEquals(future, futureAfterRevocationCallback);
+        final CompletableFuture<Void> onGroupLeftAfterRevocationCallback = membershipManager.leaveGroup();
+        assertEquals(onGroupLeft, onGroupLeftAfterRevocationCallback);
         membershipManager.transitionToUnsubscribeIfLeaving();
         verifyInStateUnsubscribed(membershipManager);
     }
 
     @Test
     public void testTransitionToUnsubscribeWhenInLeaving() {
-        final StreamsGroupHeartbeatResponse response = makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0));
         setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic");
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
+        final CompletableFuture<Void> onAllTasksRevokedCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksRevokedCallbackInvocation(activeTasksSetup))
+            .thenReturn(onAllTasksRevokedCallbackExecuted);
         joining();
-        reconcile(response);
-        acknowledging();
-        CompletableFuture<Void> future = leaving();
+        reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
+        CompletableFuture<Void> future = leaving(onAllTasksRevokedCallbackExecuted);
 
         membershipManager.transitionToUnsubscribeIfLeaving();
 
@@ -424,10 +442,15 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testOnPollTimerExpired() {
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks =
+            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         membershipManager.onPollTimerExpired();
 
@@ -437,10 +460,15 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testOnHeartbeatRequestGeneratedWhenInAcknowleding() {
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks =
+            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         membershipManager.onHeartbeatRequestGenerated();
 
@@ -449,11 +477,16 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testOnHeartbeatRequestGeneratedWhenInAcknowledgingAndNewTargetAssignment() {
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic0");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks =
+            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_1)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         membershipManager.onHeartbeatRequestGenerated();
 
@@ -462,8 +495,11 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testOnHeartbeatRequestGeneratedWhenInLeaving() {
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
-        leaving();
+        leaving(onAllTasksLostCallbackExecuted);
 
         membershipManager.onHeartbeatRequestGenerated();
 
@@ -472,6 +508,9 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testOnHeartbeatRequestGeneratedWhenInLeavingAndPollTimerExpired() {
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
         membershipManager.onPollTimerExpired();
 
@@ -489,51 +528,69 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testOnFencedWhenInReconciling() {
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic0");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks =
+            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        backgroundEventQueue.poll();
 
         testOnFencedWhenInJoiningOrReconcilingOrAcknowledgingOrStable();
     }
 
     @Test
     public void testOnFencedWhenInAcknowledging() {
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic0");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks =
+            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         testOnFencedWhenInJoiningOrReconcilingOrAcknowledgingOrStable();
     }
 
     @Test
     public void testOnFencedWhenInStable() {
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic0");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsAssignmentInterface.TaskId> activeTasks =
+            Set.of(new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0));
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasks)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
         stable();
 
         testOnFencedWhenInJoiningOrReconcilingOrAcknowledgingOrStable();
     }
 
     private void testOnFencedWhenInJoiningOrReconcilingOrAcknowledgingOrStable() {
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
+
         membershipManager.onFenced();
 
         verifyInStateFenced(membershipManager);
         assertEquals(StreamsGroupHeartbeatRequest.JOIN_GROUP_MEMBER_EPOCH, membershipManager.memberEpoch());
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        final StreamsAssignmentInterface.Assignment expectedStreamsAssignment = makeTaskAssignment(Collections.emptySet());
-        assertEquals(expectedStreamsAssignment, onAssignmentCallbackNeededEvent.assignment());
-        onAssignmentCallbackNeededEvent.future().complete(null);
+        verify(subscriptionState, never()).assignFromSubscribed(Collections.emptySet());
+        onAllTasksLostCallbackExecuted.complete(null);
         verify(subscriptionState).assignFromSubscribed(Collections.emptySet());
         verifyInStateJoining(membershipManager);
     }
 
     @Test
     public void testOnFencedWhenInPrepareLeaving() {
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
 
         testOnFencedWhenInPrepareLeavingOrLeaving(prepareLeaving());
@@ -541,9 +598,12 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testOnFencedWhenInLeaving() {
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
 
-        testOnFencedWhenInPrepareLeavingOrLeaving(leaving());
+        testOnFencedWhenInPrepareLeavingOrLeaving(leaving(onAllTasksLostCallbackExecuted));
     }
 
     private void testOnFencedWhenInPrepareLeavingOrLeaving(final CompletableFuture<Void> onGroupLeft) {
@@ -558,6 +618,9 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testTransitionToFatalWhenInPrepareLeaving() {
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
 
         testTransitionToFatalWhenInPrepareLeavingOrLeaving(prepareLeaving());
@@ -565,9 +628,12 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testTransitionToFatalWhenInLeaving() {
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
 
-        testTransitionToFatalWhenInPrepareLeavingOrLeaving(leaving());
+        testTransitionToFatalWhenInPrepareLeavingOrLeaving(leaving(onAllTasksLostCallbackExecuted));
     }
 
     private void testTransitionToFatalWhenInPrepareLeavingOrLeaving(final CompletableFuture<Void> onGroupLeft) {
@@ -581,63 +647,89 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testTransitionToFatalWhenInJoining() {
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
 
-        testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable();
+        testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable(onAllTasksLostCallbackExecuted);
     }
 
     @Test
     public void testTransitionToFatalWhenInReconciling() {
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic0");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        backgroundEventQueue.poll();
 
-        testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable();
+        testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable(onAllTasksLostCallbackExecuted);
     }
 
     @Test
     public void testTransitionToFatalWhenInAcknowledging() {
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic0");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
 
-        testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable();
+        testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable(onAllTasksLostCallbackExecuted);
     }
 
     @Test
     public void testTransitionToFatalWhenInStable() {
-        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, "topic0");
+        setupStreamsAssignmentInterfaceWithOneSubtopologyOneSourceTopic(SUB_TOPOLOGY_ID_0, TOPIC_0);
+        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup = new CompletableFuture<>();
+        final Set<StreamsAssignmentInterface.TaskId> activeTasksSetup = Set.of(
+            new StreamsAssignmentInterface.TaskId(SUB_TOPOLOGY_ID_0, PARTITION_0)
+        );
+        when(streamsAssignmentInterface.requestOnTasksAssignedCallbackInvocation(makeTaskAssignment(activeTasksSetup)))
+            .thenReturn(onTasksAssignedCallbackExecutedSetup);
+        final CompletableFuture<Void> onAllTasksLostCallbackExecuted = new CompletableFuture<>();
+        when(streamsAssignmentInterface.requestOnAllTasksLostCallbackInvocation())
+            .thenReturn(onAllTasksLostCallbackExecuted);
         joining();
         reconcile(makeHeartbeatResponse(SUB_TOPOLOGY_ID_0, List.of(PARTITION_0)));
-        acknowledging();
+        acknowledging(onTasksAssignedCallbackExecutedSetup);
         stable();
 
-        testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable();
+        testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable(onAllTasksLostCallbackExecuted);
     }
 
-    private void testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable() {
+    private void testTransitionToFatalWhenInJoiningOrReconcilingOrAcknowledgingOrStable(final CompletableFuture<Void> future) {
         membershipManager.transitionToFatal();
 
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        final StreamsAssignmentInterface.Assignment expectedStreamsAssignment = makeTaskAssignment(Collections.emptySet());
-        assertEquals(expectedStreamsAssignment, onAssignmentCallbackNeededEvent.assignment());
-        onAssignmentCallbackNeededEvent.future().complete(null);
+        verify(subscriptionState, never()).assignFromSubscribed(Collections.emptySet());
+        future.complete(null);
         verify(subscriptionState).assignFromSubscribed(Collections.emptySet());
         verifyInStateFatal(membershipManager);
     }
 
     @Test
-    public void testOnTaskAssignmentCallbackCompleted() {
+    public void testOnTasksAssignedCallbackCompleted() {
         final CompletableFuture<Void> future = new CompletableFuture<>();
-        final StreamsOnAssignmentCallbackCompletedEvent event = new StreamsOnAssignmentCallbackCompletedEvent(
+        final StreamsOnTasksAssignedCallbackCompletedEvent event = new StreamsOnTasksAssignedCallbackCompletedEvent(
             future,
             Optional.empty()
         );
 
-        membershipManager.onTaskAssignmentCallbackCompleted(event);
+        membershipManager.onTasksAssignedCallbackCompleted(event);
 
         assertTrue(future.isDone());
         assertFalse(future.isCancelled());
@@ -645,15 +737,30 @@ public class StreamsMembershipManagerTest {
     }
 
     @Test
-    public void testOnTaskAssignmentCallbackCompletedWhenCallbackFails() {
+    public void testOnAllTasksLostCallbackCompleted() {
+        final CompletableFuture<Void> future = new CompletableFuture<>();
+        final StreamsOnAllTasksLostCallbackCompletedEvent event = new StreamsOnAllTasksLostCallbackCompletedEvent(
+            future,
+            Optional.empty()
+        );
+
+        membershipManager.onAllTasksLostCallbackCompleted(event);
+
+        assertTrue(future.isDone());
+        assertFalse(future.isCancelled());
+        assertFalse(future.isCompletedExceptionally());
+    }
+
+    @Test
+    public void testOnTasksAssignedCallbackCompletedWhenCallbackFails() {
         final String errorMessage = "KABOOM!";
         final CompletableFuture<Void> future = new CompletableFuture<>();
-        final StreamsOnAssignmentCallbackCompletedEvent event = new StreamsOnAssignmentCallbackCompletedEvent(
+        final StreamsOnAllTasksLostCallbackCompletedEvent event = new StreamsOnAllTasksLostCallbackCompletedEvent(
             future,
             Optional.of(new KafkaException(errorMessage))
         );
 
-        membershipManager.onTaskAssignmentCallbackCompleted(event);
+        membershipManager.onAllTasksLostCallbackCompleted(event);
 
         assertTrue(future.isDone());
         assertFalse(future.isCancelled());
@@ -781,43 +888,6 @@ public class StreamsMembershipManagerTest {
         );
     }
 
-    private void setupStreamsAssignmentInterfaceWithTwoConcatenedSubtopologies(final String subtopologyId1,
-                                                                               final String topicName1,
-                                                                               final String subtopologyId2,
-                                                                               final String topicName2) {
-        when(streamsAssignmentInterface.subtopologyMap()).thenReturn(
-            mkMap(
-                mkEntry(
-                    subtopologyId1,
-                    new StreamsAssignmentInterface.Subtopology(
-                        Set.of(topicName1),
-                        Collections.emptySet(),
-                        Collections.emptyMap(),
-                        Collections.emptyMap(),
-                        Collections.emptyList()
-                    )
-                ),
-                mkEntry(
-                    subtopologyId2,
-                    new StreamsAssignmentInterface.Subtopology(
-                        Set.of(topicName2),
-                        Collections.emptySet(),
-                        mkMap(mkEntry(
-                            topicName2,
-                            new StreamsAssignmentInterface.TopicInfo(
-                                Optional.empty(),
-                                Optional.empty(),
-                                Collections.emptyMap()
-                            )
-                        )),
-                        Collections.emptyMap(),
-                        Collections.emptyList()
-                    )
-                )
-            )
-        );
-    }
-
     private StreamsGroupHeartbeatResponse makeHeartbeatResponse(final String subtopologyId,
                                                                 final List<Integer> partitions) {
         return makeHeartbeatResponse(Collections.singletonList(
@@ -874,9 +944,14 @@ public class StreamsMembershipManagerTest {
     }
 
     private void acknowledging() {
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
+        final StreamsOnTasksAssignedCallbackNeededEvent onAssignmentCallbackNeededEvent =
+            (StreamsOnTasksAssignedCallbackNeededEvent) backgroundEventQueue.poll();
         onAssignmentCallbackNeededEvent.future().complete(null);
+        verifyInStateAcknowledging(membershipManager);
+    }
+
+    private void acknowledging(final CompletableFuture<Void> future) {
+        future.complete(null);
         verifyInStateAcknowledging(membershipManager);
     }
 
@@ -886,11 +961,9 @@ public class StreamsMembershipManagerTest {
         return onGroupLeft;
     }
 
-    private CompletableFuture<Void> leaving() {
+    private CompletableFuture<Void> leaving(final CompletableFuture<Void> onAllTasksRevokedCallbackExecuted) {
         final CompletableFuture<Void> future = prepareLeaving();
-        final StreamsOnAssignmentCallbackNeededEvent onAssignmentCallbackNeededEvent =
-            (StreamsOnAssignmentCallbackNeededEvent) backgroundEventQueue.poll();
-        onAssignmentCallbackNeededEvent.future().complete(null);
+        onAllTasksRevokedCallbackExecuted.complete(null);
         verifyInStateLeaving(membershipManager);
         return future;
     }
